--- a/Form_Entry/index.html
+++ b/Form_Entry/index.html
@@ -10,120 +10,33 @@
 
 <body>
 
-
-  <!-- <div id="example">This will use the CSS background</div>
-  <button id="button">Not tomato</button>
-
+  <template id="template">
+    <h1>"Test"</h1>
+  </template>
 
   <template id="book-template">
     <li><span class="title"></span> &mdash; <span class="author"></span></li>
   </template>
 
-  <ul id="books"></ul> -->
-
-
-  <template id="one-dialog">
-    <script>
-      document.getElementById('launch-dialog').addEventListener('click', () => {
-        const wrapper = document.querySelector('.wrapper');
-        const closeButton = document.querySelector('button.close');
-        const wasFocused = document.activeElement;
-        wrapper.classList.add('open');
-        closeButton.focus();
-        closeButton.addEventListener('click', () => {
-          wrapper.classList.remove('open');
-          wasFocused.focus();
-        });
-      });
-    </script>
-    <style>
-      .wrapper {
-        opacity: 0;
-        transition: visibility 0s, opacity 0.25s ease-in;
-      }
-
-      .wrapper:not(.open) {
-        visibility: hidden;
-      }
-
-      .wrapper.open {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        opacity: 1;
-        visibility: visible;
-      }
-
-      .overlay {
-        background: rgba(0, 0, 0, 0.8);
-        height: 100%;
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-      }
-
-      .dialog {
-        background: #ffffff;
-        max-width: 600px;
-        padding: 1rem;
-        position: fixed;
-      }
-
-      button {
-        all: unset;
-        cursor: pointer;
-        font-size: 1.25rem;
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-      }
-
-      button:focus {
-        border: 2px solid blue;
-      }
-    </style>
-    <div class="wrapper">
-      <div class="overlay"></div>
-      <div class="dialog" role="dialog" aria-labelledby="title" aria-describedby="content">
-        <button class="close" aria-label="Close">&#x2716;&#xfe0f;</button>
-        <h1 id="title">Hello world</h1>
-        <div id="content" class="content">
-          <p>This is content in the body of our modal</p>
-        </div>
-      </div>
-    </div>
+  <template id="book-template-2">
+    <li><span class="author"></span>'s classic novel <span class="title"></span></li>
   </template>
 
-  <!-- <template id="template">
-    <script>
-      const button = document.getElementById('click-me');
-      button.addEventListener('click', event => alert(event));
-    </script>
-    <style>
-      #click-me {
-        all: unset;
-        background: tomato;
-        border: 0;
-        border-radius: 4px;
-        color: white;
-        font-family: Helvetica;
-        font-size: 1.5rem;
-        padding: .5rem 1rem;
-      }
-    </style>
-    <button id="click-me">Log click event</button>
-  </template> -->
+  <ul id="books"></ul>
 
-  <!-- <my-component></my-component> -->
+  <fieldset id="templates">
+    <legend>Choose template</legend>
+
+    <label>
+      <input type="radio" name="template" value="book-template" checked> Template One
+    </label>
+    <label>
+      <input type="radio" name="template" value="book-template-2"> Template Two
+    </label>
+  </fieldset>
+
+
+
   <script src="app.js"></script>
 </body>
 
