--- a/Form_Entry/index.html
+++ b/Form_Entry/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script type="module" src="https://js.arcgis.com/calcite-components/1.0.0-beta.80/calcite.esm.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/1.0.0-beta.80/calcite.css" />
   <title>Form</title>
 </head>
 
@@ -13,7 +15,7 @@
   <template id="template">
     <h1>"Hello"</h1>
   </template>
-<!-- 
+  <!-- 
   <template id="book-template">
     <li><span class="title"></span> &mdash; <span class="author"></span></li>
   </template>
